# beagleboneblack

humidity_sensor/: CMakeLists.txt  README.md  error_logger.h  file_log.c  file_log_conf.h  init.sql  logger.c  main.c  sensor_conf.h  si7021_sensor.c  si7021_sensor.h  sqlite_log.c
humidity_sensor/conf/file_conf/: CMakeLists.txt
humidity_sensor/conf/si7021/: CMakeLists.txt
humidity_sensor/conf/sqlite_conf/: CMakeLists.txt  sqlite_log_conf.h
humidity_sensor/libs/error_logger/: CMakeLists.txt  error_logger.c
humidity_sensor/libs/reading_logger/: CMakeLists.txt  file_log.c  reading_logger.h
humidity_sensor/libs/si7021/: CMakeLists.txt  si7021_sensor.c  si7021_sensor.h
humidity_sensor/src/: main.c
